--- a/TestNG/pom.xml
+++ b/TestNG/pom.xml
@@ -20,7 +20,37 @@
     <dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
-	    <version>7.3.0</version>
+	    <version>7.0.0</version>
     </dependency>
+  	<dependency>
+        <groupId>org.apache.metamodel</groupId>
+        <artifactId>MetaModel-full</artifactId>
+        <version>4.3.2</version>
+    </dependency>  
+   	<dependency>
+   		<groupId>org.apache.commons</groupId>
+   		<artifactId>commons-csv</artifactId>
+   		<version>1.0</version>
+	</dependency>
+	<dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.6</version>
+    </dependency>	
+	<dependency>
+   		<groupId>commons-io</groupId>
+  	 	<artifactId>commons-io</artifactId>
+   		<version>2.4</version>
+	</dependency>
+	<dependency>
+   	 	<groupId>com.opencsv</groupId>
+   	 	<artifactId>opencsv</artifactId>
+    	<version>3.8</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.univocity</groupId>
+    	<artifactId>univocity-parsers</artifactId>
+    <version>2.1.1</version>
+</dependency>
   </dependencies>
 </project>
