--- a/StandaloneUtility/pom.xml
+++ b/StandaloneUtility/pom.xml
@@ -30,5 +30,10 @@
 		    <artifactId>mail</artifactId>
 		    <version>1.4</version>
 		</dependency>
+		<dependency>
+      		<groupId>org.slf4j</groupId>
+      		<artifactId>slf4j-simple</artifactId>
+      		<version>1.7.6</version>
+    	</dependency>	
     </dependencies>
 </project>
