--- a/JUnit/pom.xml
+++ b/JUnit/pom.xml
@@ -24,6 +24,12 @@
 			<version>4.12</version>
 		</dependency>
 		<dependency>
+	       	<groupId>com.tngtech.java</groupId>
+	       	<artifactId>junit-dataprovider</artifactId>
+	       	<version>1.5.0</version>
+	       	<scope>test</scope>
+		</dependency>
+		<dependency>
     		<groupId>org.apache.commons</groupId>
     		<artifactId>commons-csv</artifactId>
     		<version>1.0</version>
@@ -39,6 +45,12 @@
    			<groupId>pl.pragmatists</groupId>
    			<artifactId>JUnitParams</artifactId>
     		<version>1.1.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.2</version>
 		</dependency>
  </dependencies>
 </project>
