--- a/SpringDockerKafka/src/main/resources/application.yaml
+++ b/SpringDockerKafka/src/main/resources/application.yaml
@@ -2,7 +2,8 @@ spring:
   application:
     name: springDockerKafka
   kafka:
-    bootstrap-servers: localhost:29092
+    #bootstrap-servers: localhost:29092
+    bootstrap-servers: kafka:29092
     consumer:
       group-id: test-consumer-group
       auto-offset-reset: earliest
